# pluto-lavatrice

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md  SConstruct  partitions.csv  sdkconfig
main/: CMakeLists.txt  idf_component.yml  main.c
main/config/: app_config.h  hardwareprofile.h  parameter_conf.h  pman_conf.h
main/controller/: controller.c  controller.h  gui.c  gui.h  modbus.c  modbus.h  storage.c  storage.h
main/controller/com/: crc16-ccitt.c  crc16-ccitt.h  machine.c  machine.h  packet.c  packet.h
main/controller/configuration/: archive_management.c  archive_management.h  configuration.c  configuration.h  msc.c  msc.h
main/model/: event.c  event.h  model.c  model.h  parlav.c  parlav.h  parmac.c  parmac.h  programs.c  programs.h
main/model/descriptions/: AUTOGEN_FILE_parmac.c  AUTOGEN_FILE_parmac.h  AUTOGEN_FILE_pars.c  AUTOGEN_FILE_pars.h  parstring.c  parstring.h
main/peripherals/: buzzer.c  buzzer.h  fs_storage.c  fs_storage.h  gettoniera.c  gettoniera.h  hardwareprofile.h  heartbit.c  heartbit.h  i2c_devices.c  keyboard.c  keyboard.h  machine_serial.c  machine_serial.h  pwoff.c  pwoff.h  storage.c  storage.h  system.c  system.h
main/peripherals/display/: NT7534.c  NT7534.h  display_common.c  display_common.h  lv_drv_conf.h
main/utils/: utils.c  utils.h
main/view/: common.c  common.h  styles.c  styles.h  view.c  view.h  view_types.h
main/view/fonts/: hsw6x8.c  hsw6x8.fnt  hsw8x16.c  hsw8x16.fnt  hsw8x8.c  hsw8x8.fnt  hsw8x8_bold.c  hsw8x8_bold.fnt  legacy_fonts.c  legacy_fonts.h
main/view/images/: legacy.h  (+44 more)
(+89 files in other folders)
